Finish static pages

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: sample_app_development
   pool: 5
-  username: sample_app
+  username: sumu
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -46,9 +46,9 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: sample_app_test
+  database: sample_app_production
   pool: 5
-  username: sample_app
+  username: sumu
   password:
 
 production:
@@ -56,5 +56,5 @@ production:
   encoding: unicode
   database: sample_app_production
   pool: 5
-  username: sample_app
+  username: sumu
   password:
